--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://boshea1.github.io/rentalwebsite/",
   "name": "rentalwebsite",
   "version": "0.1.0",
   "private": true,
@@ -6,14 +7,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.7",
     "autoprefixer": "10.4.14",
+    "bootstrap": "^5.3.0-alpha3",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
+    "sass": "^1.62.1",
     "tailwindcss": "3.3.2"
   }
 }
