--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@popperjs/core": "^2.11.7",
     "autoprefixer": "10.4.14",
     "bootstrap": "^5.3.0-alpha3",
-    "next": "13.4.1",
+    "next": "^13.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
